force-app/main/default/objects/Territory__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
    <visibilityPublic</visibilityPublic>
</CustomField>