force-app/main/default/objects/Territory__c/fields/Territory_Manager__c.field-meta.xml
<CustomField>
    <fullName>Territory_Manager__c</fullName>
    <label>Territory Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Territories Managed</relationshipLabel>
    <required>true</required>
    <type>Lookup</type>
    <visibilityPublic</visibilityPublic>
</CustomField>